# sandy

./: README.md  setup.cfg
.github/workflows/: test_notebooks.yml  unit_test.yml
notebooks/: notebook_IFY_sampling_procedure.ipynb  notebook_add_correlations_to_sampled_br.ipynb  notebook_apply_covariance_to_samples.ipynb  notebook_chain_fy.ipynb  notebook_check_log_sampling_magnitude.ipynb  notebook_combine_cov.ipynb  notebook_consistency_pert_pendf_U5.ipynb  notebook_fy_check_jeff4.ipynb  notebook_gls_update_fy_covariance_matrix.ipynb  notebook_howmanyrdd.ipynb  notebook_jeff33_pu239_nubar.ipynb  notebook_lognorm_sampling_u5.ipynb  notebook_lognormal.ipynb  notebook_lognormal_w184.ipynb  notebook_mf33mt51_not_mf33mt4.ipynb  notebook_multivariate_cov.ipynb  notebook_random_files.ipynb  notebook_random_files_2steps.ipynb  notebook_sampling_decay_data.ipynb  notebook_sampling_ify_pu239th_cea.ipynb  notebook_sampling_ify_u235th_cea_c1.ipynb
sandy/: __init__.py  constants.py  cov.py  edistr.py  endf6.py  errorr.py  fy.py  gendf.py  samples.py  sampling.py  xs.py
sandy/core/: __init__.py  classes_core.html  cov.py  endf6.py  packages_core.html  samples.py  xs.py
sandy/sections/: mf5.py
