[metadata]
name = sandy
version = attr: sandy.__version__
author = Luca Fiorito
author_email = lucafiorito.11@gmail.com
url = https://github.com/luca-fiorito-11/sandy
description = SANDY: sampling of nuclear data and uncertainty
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy
    pandas
    pyyaml
    openpyxl

[options.extras_require]
test =
    numpydoc
    nbval
    codecov
    coveralls
    pytest-cov
notebook =
    jupyterlab
    notebook
    matplotlib
    seaborn
    scikit-learn
    jupyter_nbextensions_configurator
    jupyter_contrib_nbextensions
    serpentTools
doc = 
    sphinx
    sphinx_rtd_theme
pack =
    build
    twine


[options.packages.find]
exclude =
    notebooks*

[options.package_data]
* = README.md, appendix/**
